[package]
name = "danger-noodle"
version = "0.1.0"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Snake Clone in Rust, with Bevy"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/danger-noodle/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false
