[package]
name = "danger-noodle"
version = "0.1.0"
authors = ["Paul Horn <developer@knutwalker.de>"]
description = "Snake Clone in Rust, with Bevy"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knutwalker/danger-noodle/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dependencies.bevy]
version = "0.4.0"
default-features = false
features = [
    "bevy_wgpu",
    "bevy_winit",
    "render",
]
